# TorWall

./: CMakeLists.txt  build.bat  build.sh  domain.c  domain.h  main.c  main.h  main.manifest  main.rc  redirect.c
workarounds/: VLA.h  flush-dns.h  packed-struct.h
